Fixed issue on html where incorrect React syntax was used

--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
   <link href="/static/css/site.css" rel="stylesheet">
 </head>
 <body>
-  <h1></h1>
+  <h1>Game Tracker Web App</h1>
 
   {% block body %}
   {% endblock %}
