--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,13 @@
 {% extends 'base.html' %}
 
-{% block title %}Cards{% endblock %}
+{% block title %}Game Tracker{% endblock %}
 
 {% block js %}
-<!-- <script src="/static/js/tradingCard.jsx" type="text/jsx"></script> -->
+<script src="/static/js/components.jsx" type="text/jsx"></script>
+<script src="/static/js/app.jsx" type="text/jsx"></script>
 {% endblock %}
 
 
 {% block body %}
-<div>
-</div>
-
+<div id="root"></div>
 {% endblock %}
