Added redirect to user dashboard when user is logged in

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,4 +18,12 @@
 
   {% block body %}
   {% endblock %}
+
+<!-- Show flashed messages -->
+{% with messages = get_flashed_messages() %}
+  {% for message in messages %}
+      <div class="alert alert-warning">{{ message }}</div>
+  {% endfor %}
+{% endwith %}
+
 </body>
