--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   {% block js %}
   {% endblock %}
 
-  <link href="/static/css/site.css" rel="stylesheet">
+  <!-- <link href="/static/css/site.css" rel="stylesheet"> -->
 </head>
 <body>
   <h1>Game Tracker Web App</h1>
