--- a/src/App.css
+++ b/src/App.css
@@ -16,8 +16,9 @@
 
 .title {
     font-weight: bold;
-    font-size: 1.2rem;
+    font-size: 1rem;
     color: black;
+    height: 30px;
 }
 
 .game-genre {
@@ -34,7 +35,7 @@
 
 .description-titles {
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 0.8rem;
     color: black;
 }
 
