--- a/src/App.css
+++ b/src/App.css
@@ -141,3 +141,9 @@ h1 {
     align-items: center;
     justify-content: center;
 }
+
+#loading-spinner {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+}
