--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ h1 {
 
 .title {
     font-weight: bold;
-    font-size: 1.3rem;
+    font-size: 1rem;
     color: black;
     height: 40px;
 }
@@ -146,4 +146,12 @@ h1 {
     position: fixed;
     bottom: 0;
     left: 0;
+}
+
+.forms {
+    display: block;
+    height: 1200px;
+    width: 600px;
+    margin: auto;
+    text-align: center;
 }
