--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,10 @@ body {
 h1 {
     font-size: 2rem;
     padding: 20px;
+    margin: auto;
+    text-align:center;
+    align-items: center;
+    justify-content: center;
 }
 
 .game {
@@ -26,44 +30,58 @@ h1 {
 
 .title {
     font-weight: bold;
-    font-size: 1rem;
+    font-size: 1.3rem;
     color: black;
-    height: 40px;
+    height: 75px;
+    padding-left: 30px;
+    width: 700px;
+    overflow-wrap: break-word;
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .game-genre {
     display: inline;
-    font-size: 0.6rem;
-    color: #0000008b;
+    font-size: 0.8rem;
+    color: #000000b7;
 }
 
 .game-platform {
     display: inline;
-    font-size: 0.6rem;
-    color: #0000008b;
+    font-size: 0.8rem;
+    color: #000000b7;
 }
 
 .description-titles {
     font-weight: bold;
-    font-size: 0.8rem;
+    font-size: 1.1rem;
     color: #000000bd;
+    padding-left: 30px;
+    height: 25px;
 }
 
 .release-date {
-    font-size: 0.75rem;
+    font-size: 1rem;
     color: #000000bd;
+    padding-left: 30px;
 }
 
 .genres {
     display: block;
-    height: 25px;
-    width: 400px;
+    height: 65px;
+    width: 500px;
+    padding-left: 30px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 .platforms {
     display: block;
-    height: 50px;
-    width: 400px;
+    height: 65px;
+    width: 500px;
+    padding-left: 30px;
+    padding-top: 4px;
+    padding-bottom: 4px;
 }
 
 .game-description {
@@ -77,7 +95,7 @@ h1 {
 .recommended-games {
     display: block;
     height: 1200px;
-    width: 600px;
+    width: 900px;
     margin: auto;
     text-align: center;
     padding: 50px;
@@ -86,6 +104,7 @@ h1 {
 .carousel-indicators {
     bottom:-50px;
   }
+
 
 .detail-title{
     font-weight: 600;
@@ -169,4 +188,34 @@ h1 {
     width: 600px;
     margin: auto;
     text-align: center;
+}
+
+.follows-list {
+    margin: auto;
+    text-align: center;
+}
+
+.follows-list-title {
+    font-size: 2rem;
+    text-align: center;
+}
+
+.follows-card {
+    margin: auto;
+    margin-top: 20px;
+    text-align: center;
+}
+
+.game-container {
+    margin: auto;
+    text-align:center;
+    align-items: center;
+    justify-content: center;
+}
+
+.small-cover {
+    padding-bottom: 20px;
+    border-radius: 8px;
+    width: 200px;
+    height: 275px;
 }
