--- a/src/App.css
+++ b/src/App.css
@@ -265,3 +265,34 @@ h1 {
 .navbar-brand {
     text-align:center;
 }
+
+.home-background {
+    background-image: url(https://www.usnews.com/object/image/00000181-2b3d-d686-ab89-2b3d160a0000/gettyimages-1170073824.jpg?update-time=1654287935755&size=responsive970);
+    height: 75vh;
+    opacity: 0.75;
+    padding-top: 20%;
+}
+
+.home-title {
+    background-color: #efeeee;
+    width: 80%;
+    font-weight: bold;
+    margin: auto;
+    color: #0f5448;
+    border: 1px solid #efeeee;
+    border-radius: 8px;
+}
+
+
+.container-for-home-button {
+    padding: 1%;
+    margin: auto;
+    text-align: center;
+}
+
+.home-button {
+    background-color: #efeeee;
+    font-weight: 900;
+    color: #0f5448;
+    font-size: 1.1rem;
+}
