--- a/src/App.css
+++ b/src/App.css
@@ -123,7 +123,7 @@ h1 {
     font-size: 1.2rem;
     margin: auto;
     text-align: center;
-    padding: 10px;
+    padding: 1px;
 }
 
 
@@ -320,4 +320,11 @@ h1 {
     margin: auto;
     color: black;
     border: 1px solid #efeeee;
+}
+
+
+.rating-form {
+    display: block;
+    margin: auto;
+    text-align: center;
 }
