Darkened font of homepage and changed Explore header

--- a/src/App.css
+++ b/src/App.css
@@ -275,7 +275,7 @@ h1 {
     width: 80%;
     font-weight: bold;
     margin: auto;
-    color: #0f5448;
+    color: #09362e;
     border: 1px solid #efeeee;
     border-radius: 8px;
 }
